--- a/AllForKids/nbproject/project.properties
+++ b/AllForKids/nbproject/project.properties
@@ -58,6 +58,7 @@ file.reference.javax.mail-1.4.4.jar-4=C:\\Users\\hammamet\\Desktop\\javax.mail-1
 file.reference.jfoenix-8.0.1.jar=/Users/MacBook/Downloads/jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=C:\\Users\\hammamet\\Desktop\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-3=C:\\Users\\hammamet\\Desktop\\jfoenix-8.0.1.jar
+file.reference.opencv-340.jar-1=C:\\Users\\Molka\\Documents\\opencv-340.jar
 file.reference.scribe-1.3.0.jar=/Users/MacBook/Desktop/scribe-1.3.0.jar
 =======
 file.reference.scribe-1.3.0.jar-1=C:\\Users\\hammamet\\Desktop\\scribe-1.3.0.jar
@@ -140,7 +141,8 @@ javac.classpath=\
     ${file.reference.scribe-1.3.0.jar-2}:\
     ${file.reference.controlsfx-8.0.1.jar}:\
     ${file.reference.controlsfx-samples-8.40.14.jar}:\
-    ${file.reference.twilio-7.17.7-jar-with-dependencies.jar-3}
+    ${file.reference.twilio-7.17.7-jar-with-dependencies.jar-3}:\
+    ${file.reference.opencv-340.jar-1}
     ${file.reference.itextpdf-5.1.0.jar}
 =======
     ${file.reference.facebook4j-core-2.4.10.jar-1}:\
